--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".payment2"></activity>
+        <activity android:name=".AddDetailsEdit"></activity>
+        <activity android:name=".Adddetails" />
+        <activity android:name=".check" />
+        <activity android:name=".Room" />
+        <activity android:name=".payment2" />
         <activity android:name=".payment1" />
         <activity android:name=".LogIn">
             <intent-filter>
