--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddDetailsEdit"></activity>
+        <activity android:name=".ViewMessage"></activity>
+        <activity android:name=".AddDetailsEdit" />
+        <activity android:name=".UpdateDelete" />
         <activity android:name=".Adddetails" />
         <activity android:name=".check" />
+        <activity android:name=".contact" />
         <activity android:name=".Room" />
         <activity android:name=".payment2" />
         <activity android:name=".payment1" />
