--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,26 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewMessage"></activity>
-        <activity android:name=".AddDetailsEdit" />
-        <activity android:name=".UpdateDelete" />
-        <activity android:name=".Adddetails" />
-        <activity android:name=".check" />
-        <activity android:name=".contact" />
-        <activity android:name=".Room" />
+        <activity android:name=".LogIn"></activity>
+        <activity android:name=".payment3" />
         <activity android:name=".payment2" />
-        <activity android:name=".payment1" />
-        <activity android:name=".LogIn">
+        <activity android:name=".Home" />
+        <activity android:name=".checkavailability1" />
+        <activity android:name=".checkavailability2" />
+        <activity android:name=".paymentnew">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Home" />
-        <activity android:name=".Finish" />
-        <activity android:name=".BookNow" />
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
