--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LogIn"></activity>
+        <!--<activity android:name=".LogIn"></activity>-->
         <activity android:name=".payment3" />
         <activity android:name=".payment2" />
         <activity android:name=".Home" />
         <activity android:name=".checkavailability1" />
         <activity android:name=".checkavailability2" />
-        <activity android:name=".paymentnew">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".paymentnew"/>
+        <activity android:name=".makereservation1" />
+        <activity android:name=".makereservation2" />
+        <activity android:name=".makereservation3" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+        <!--<activity android:name=".paymentnew">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+        <activity android:name=".LogIn">
+
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
