--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,12 @@
         <activity android:name=".paymentnew" />
         <activity android:name=".makereservation1" />
         <activity android:name=".makereservation2" />
-        <activity android:name=".makereservation3" /> <!-- <activity android:name=".paymentnew"> -->
+        <activity android:name=".makereservation3" />
+        <activity android:name=".makereservation4" />
+        <activity android:name=".contactus1"/>
+        <activity android:name=".contactus2"/>
+        <activity android:name=".contactus3"/>
+        <!-- <activity android:name=".paymentnew"> -->
         <!-- <intent-filter> -->
         <!-- <action android:name="android.intent.action.MAIN" /> -->
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
