--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-database:19.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
 }
