change login details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".paymentAccount"></activity>
-        <!-- <activity android:name=".LogIn"></activity> -->
+        <activity android:name=".paymentAccount" /> <!-- <activity android:name=".LogIn"></activity> -->
         <activity android:name=".payment3" />
         <activity android:name=".payment2" />
         <activity android:name=".Home" />
@@ -21,10 +20,13 @@
         <activity android:name=".makereservation2" />
         <activity android:name=".makereservation3" />
         <activity android:name=".makereservation4" />
-        <activity android:name=".contactus1"/>
-        <activity android:name=".contactus2"/>
-        <activity android:name=".contactus3"/>
-        <!-- <activity android:name=".paymentnew"> -->
+        <activity android:name=".contactus1" />
+        <activity android:name=".contactus2" />
+        <activity android:name=".contactus3" /> <!-- <activity android:name=".paymentnew"> -->
+        <activity android:name=".Adddetails1" />
+        <activity android:name=".AddDetails2" />
+
+
         <!-- <intent-filter> -->
         <!-- <action android:name="android.intent.action.MAIN" /> -->
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
