added loading page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".LogIn" />
         <activity android:name=".slideshowGallary"></activity>
         <activity android:name=".Addddmiiiinnn" />
         <activity android:name=".paymentAccount" /> <!-- <activity android:name=".LogIn"></activity> -->
@@ -31,7 +32,7 @@
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
         <!-- </intent-filter> -->
         <!-- </activity> -->
-        <activity android:name=".LogIn">
+        <activity android:name=".Loading">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
