--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".viewpaymentdetails"></activity>
         <activity android:name=".LogIn" />
-        <activity android:name=".slideshowGallary"></activity>
+        <activity android:name=".slideshowGallary" />
         <activity android:name=".Addddmiiiinnn" />
         <activity android:name=".paymentAccount" /> <!-- <activity android:name=".LogIn"></activity> -->
         <activity android:name=".payment3" />
